# mkrdf

./: Containerfile  README.md  Taskfile.yaml  mkrdf.py  pyproject.toml
.github/workflows/: oci-publish.yml
