[project]
name = "mkrdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Natanael Arndt",email = "arndtn@gmail.com"}
]
license = {text = "EUPL"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "jinja-rdf @ file:///var/home/natanael/Documents/Workspaces/pub/jinja-rdf",
    "mkdocs (>=1.6.1,<2.0.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
jinja-rdf = {develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.0"

[project.entry-points."mkdocs.plugins"]
mkrdf = "mkrdf:MkRDFPlugin"
